--- a/posts/2017/2017-07-30-rolodex.md
+++ b/posts/2017/2017-07-30-rolodex.md
@@ -4,9 +4,9 @@ permalink: /2017/rolodex
 
 # Rolodex
 
-![Photo][1]
+![Rolodex][1]
 
 _via [Instagram][2]_
 
- [1]: https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/18443464_1840056592983629_1132029778656755712_n.jpg
+ [1]: /_img/2017/rolodex.jpg
  [2]: https://www.instagram.com/p/BT_qVPBAbAD/
