Catch up and add Templates

--- a/posts/2018/2018-12-02_peloton.md
+++ b/posts/2018/2018-12-02_peloton.md
@@ -4,7 +4,7 @@ Permalink: /2018/new-peloton
 
 # My first ride on the Peloton bike
 
-Once my house sold, I promised myself I would by a [Peloton](https://www.onepeloton.com) bike.
+Once my house sold, I promised myself a [Peloton](https://www.onepeloton.com) bike.
 
 ![Peloton Cycle](/_img/2018/2018-12-02_peloton.jpg)
 
