--- a/posts/2019/2019-01-08_notion.md.md
+++ b/posts/2019/2019-01-08_notion.md.md
@@ -5,6 +5,8 @@ Permalink: /2019/whered-you-get-the-notion
 
 # Said I'd like to know where, you got the Notion
 
+{>} ![](/_img/notion.png)
+
 I keep reading that people love [Notion.so][1], and I don’t mean to rock the boat, but I don’t get it. I tried kicking it around a few times and almost nothing about it clicks for me. Notion strikes me as one of those things that tries to do everything but ends up doing nothing well.
 
 I can’t imagine using it with a team and them being able to keep track of what’s used for what and why. I couldn’t even get a team to manage a few todo lists in Asana.
