--- a/posts/2019/2019-04-04-eb-white.md
+++ b/posts/2019/2019-04-04-eb-white.md
@@ -1,5 +1,6 @@
 Date: 2019-04-04 09:42
 Tags: writing, book
+Icon: 🌀 
 
 # Essays of E.B. White
 
@@ -22,7 +23,3 @@ I want to toss my complex digital cameras aside, load an old Leica with Tri-X
 and sit by a lake or walk in the woods. 
 
 I want to notice things and write notes about them.
-
-
-
-
