--- a/posts/2019/2019-04-13-tinderbox-8.md
+++ b/posts/2019/2019-04-13-tinderbox-8.md
@@ -1,5 +1,6 @@
 Date: 2019-04-13 10:52
 Tags: tinderbox
 Micro: true
+Icon: 🔗
 
 [Tinderbox 8 is available](http://www.eastgate.com/Tinderbox/updates/Tinderbox8.html) and is another solid update. Map views continue to improve. Filtered outlines are really handy. Tinderbox remains the most useful app on my Mac.
