--- a/posts/2023/02/2023-02-02-2023-roll-101-stylus-epic/2023-02-02-2023-roll-101-stylus-epic.md
+++ b/posts/2023/02/2023-02-02-2023-roll-101-stylus-epic/2023-02-02-2023-roll-101-stylus-epic.md
@@ -1,6 +1,6 @@
 ---
 Date: 2023-02-02 06:26
-Tags: Photography, Film, StylusEpic
+Tags: Photography, Film, Olympus
 Slug: 2023-roll-101-stylus-epic
 ---
 
