--- a/[Journal]/2023/2023-04-12.md
+++ b/[Journal]/2023/2023-04-12.md
@@ -6,6 +6,8 @@ Draft: No
 
 # Wednesday, April 12, 2023
 
+{>} ![](https://static.baty.net/images/small/jack-and-iphone.png)
+
 Day two of putting daily notes here on the main blog. I'm still not convinced it's what I want. I don't love the idea of these rambling daily notes cluttering things up and obscuring the "real" posts. Odds are that I'm overthinking it and it's not a problem.
 
 ---
@@ -25,5 +27,10 @@ The blog looks good, IMO, but needs a little whimsy. Maybe a fun, changeable tag
 ---
 
 I worry that although the daily posts _look_ like regular posts, the paragraphs within them are usually unrelated. I'm hoping that an unobtrusive `<hr>` between entries within daily notes will help. My next feat will be to attach a class to posts tagged "Journal" and just add a small bottom border to each paragraph. I don't yet know how to do that in Blot's templates.
+
+
+---
+
+I don't have a take on the new Notes features of Substack. It seems that everyone else does, though.
 
 
