--- a/[Journal]/2023/2023-04-17.md
+++ b/[Journal]/2023/2023-04-17.md
@@ -19,3 +19,19 @@ I'm ashamed of how poorly I react to new information that doesn't fit my models 
 
 ---
 
+I like the idea of Sourcehut and (most of the time) its bare-bones simplicity. But after many months I still cannot navigate the site to save my life. I may decide to consolidate back on Github.
+
+---
+
+I lean left, so DeBoar sometimes hurts my feelings because he knows how we can be:
+
+> Look, I’m gonna level with you here. Like the vast majority of leftists who have been minted since Occupy Wall Street, my principles, values, and policy preferences don’t stem from a coherent set of moral values, developed into an ideology, which then suggests preferred policies. At all. That requires a lot of reading and I’m busy organizing black tie fundraisers at work and bringing Kayleigh and Dakota to fencing practice. I just don’t have the time. So my politics have been bolted together in a horribly awkward process of absorbing which opinions are least likely to get me screamed at by an online activist or mocked by a podcaster.
+> 
+> <cite>Freddie DeBoer, "A Conversation About Crime"</cite>
+
+---
+
+When buying a new vinyl record, it almost always includes a code to download the MP3 version. Why don't I get a free ebook version when I buy a hardcover book? I would like that.
+
+---
+
