--- a/[Journal]/2023/2023-04-26/2023-04-26.md
+++ b/[Journal]/2023/2023-04-26/2023-04-26.md
@@ -18,6 +18,7 @@ I'm testing [Captee](http://yummymelon.com/captee/) on macOS. Captee adds an ite
 > 
 > <cite>[ibid]</cite>
 
+Now I don't know if I want to shoot _all_ film or give it up entirely.
 
 ---
 
@@ -25,4 +26,15 @@ I fired up an Alt Twitter account this morning so I could shit-post a bit, and I
 
 ---
 
+You'll never convince me that using present tense in commit messages is correct. The idea that a commit message tells us "what will happen after the commit is applied" is all well and good, but it will only be read in that context for a short time, after which it will always be read as a log of what happened. Past tense. The fact that the imperative form is prevalent and I should "just follow convention" is your problem 😜.
+
+---
+
+My views around generative art are evolving. I've always considered it to be amazing as a technology demo, but completely uninteresting as capital-A "Art". But who am I to undermine someone's creative output, whatever its form or process? Just because a person can't successfully manipulate a brush coated in paint doesn't mean they're not full of creative energy and just looking for ways to express it. Good for them, I say.
+
+---
+
+![](_grilling-cheese.jpg)
+
+If it weren't for Hello Fresh I'd never eat this kind of stuff. I'd never even _heard_ of grilling cheese before today.
 
